# QShark

./: .gitignore  CMakeLists.txt  Engine.cpp  Engine.h  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
